# dataagents

./: README.md  demo.py  pyproject.toml  requirements.txt  setup.py
dataagents/: __init__.py  client.py
dataagents/core/: agents.py  processing.py  storage.py
