[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataagents"
version = "0.1.0"
description = "A Python package for data cleaning and processing agents."
readme = "README.md"
authors = [
    { name = "Alex Hou", email = "houalex@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "autogen>=0.2.0",
    "minio>=7.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "plotly>=5.0.0",
    "great-expectations>=0.15.0",
    "pydantic>=1.10.0",
    "requests>=2.26.0"
]

[project.urls]
Homepage = "https://github.com/madaibaba/dataagents"
Repository = "https://github.com/madaibaba/dataagents"
Documentation = "https://github.com/madaibaba/dataagents/wiki"

[tool.setuptools]
packages = ["dataagents"]
